# FB_full_project

./: .gitignore  pyproject.toml
fb_project/: main.py  scraper_tools.py
fb_project/tasks/: posts.py
