[tool.poetry]
name = "fb-project"
version = "0.1.0"
description = ""
authors = ["Michael <h1m1w1@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
pyyaml = "^6.0.1"
black = "^23.12.0"
flake8 = "^6.1.0"
m2r = "^0.3.1"
aiofiles = "^23.2.1"
bs4 = "^0.0.1"
pyproject-flake8 = "^6.1.0"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
yapf = "^0.40.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
black = "^23.12.1"
pytest-asyncio = "^0.23.3"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = ['__init__.py:F401']
max-line-length = 120
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
